# CourseWork3

./: README.md  mypy.ini  pyproject.toml  user_settings.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
